# koscom_ai_agent

./: .dockerignore  .env  Dockerfile  README.md  claude_desktop_config.json  compose.yml  requirements.txt
frontend/: readme.md  web_chat_app.py
frontend/templates/: index.html
infra/docker/: influxdb-compose.yml  nginx.conf
mcp_servers/krw-full-reserve/: claude_desktop_config.json  krws_dashboard.html  mcp_http_gateway.py  mcp_server.py  pyproject.toml
mcp_servers/krw-full-reserve/app_mcp/: __init__.py  server.py
mcp_servers/krw-full-reserve/app_mcp/tools/: __init__.py  coverage.py  history.py  offchain.py  onchain.py  report.py
mcp_servers/krw-full-reserve/config/: api_config.py  institutions.json  thresholds.json
mcp_servers/krw-full-reserve/core/: __init__.py  calculator.py  constants.py  db.py  types.py
mcp_servers/krw-full-reserve/data/: __init__.py  mock_data.py  scenarios.py
mcp_servers/krw-full-reserve/tests/: __init__.py  test_tools.py
mcp_servers/tx_audit/: .env  .gitignore  README.md  audit_gateway.py  pyproject.toml  verify_etherscan.py
mcp_servers/tx_audit/apps/: __init__.py
mcp_servers/tx_audit/apps/api/: collector.py  merkle.py
mcp_servers/tx_audit/core/config/: settings.py
mcp_servers/tx_audit/core/db/: database.py  influx.py
mcp_servers/tx_audit/core/logging/: logger.py
mcp_servers/tx_audit/core/utils/: hash_utils.py  time_utils.py
mcp_servers/tx_audit/data/: audit.db
mcp_servers/tx_audit/docs/: architecture.md
mcp_servers/tx_audit/scripts/: check_etherscan.py  init_db.py  show_sync_status.py  test_influx.py
mcp_servers/tx_audit/servers/: __init__.py  mcp_koscom.py
(+94 files in other folders)
