[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koscom-mcp"
version = "0.1.0"
description = "Stablecoin audit trail and immutable record management MCP server"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "leedowon", email = "example@domain.com" }]
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "reportlab>=4.2.5,<5.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.1,<1.0.0",
    "sqlalchemy>=2.0.32,<3.0.0",
    "web3>=7.0.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "black>=24.8.0,<25.0.0",
    "isort>=5.13.2,<6.0.0",
]

[tool.setuptools.packages.find]
include = [
    "apps",
    "apps.*",
    "core",
    "core.*",
    "servers",
    "servers.*",
]
exclude = [
    "data*",
    "dags*",
    "docs*",
    "scripts*",
]
